# ROS_init_practice

./: README.md
ros2_ws1_basic/: README.md
ros2_ws1_basic/src/practice_controller/: setup.py
ros2_ws1_basic/src/practice_controller/practice_controller/: turtle_controller.py
ros2_ws1_basics/: README.md
ros2_ws1_basics/src/practice_controller/: practice_node.py  turtle_move_cycle.py
ros2_ws1_basics/src/practice_controller/practice_controller/: turtle_read_pose.py
ros2_ws2_vis_sim/: README.md
ros2_ws2_vis_sim/src/practice_robot_description/: CMakeLists.txt  package.xml
ros2_ws2_vis_sim/src/practice_robot_description/config/: gazebo_bridge.yaml
ros2_ws2_vis_sim/src/practice_robot_description/launch/: display.launch.practice.gazebo.xacro.xml  display.launch.practice.jazzy.gazebo.xacro.xml  display.launch.practice.xacro.xml  display.launch.practice.xml  display.launch.practice_test.xml  display.launch_withRvizConfig.practice.gazebo.xacro.xml  display.launch_withRvizConfig.xacro.practice.xml  display.launch_withRvizConfig.xml  display.launch_withSDFworld.practice.jazzy.gazebo.xacro.xml  gazebo.launch.diffCart.jazzy.xacro.xml  gazebo.launch.diffCartWithArm.jazzy.xacro.xml  gazebo.launch_withRvizConfig.diffCart.xacro.xml  gazebo.launch_withSDFworld.diffCart.jazzy.xacro.xml  rviz.launch.base_test.xml  rviz.launch.diffCart.gazebo.xacro.xml  rviz.launch.diffCart.xacro.xml  rviz.launch.diffCart.xml  rviz.launch.diffCartWithArm.gazebo.xacro.xml  rviz.launch_withRvizConfig.diffCart.xacro.xml  rviz.launch_withRvizConfig.diffCart.xml
ros2_ws2_vis_sim/src/practice_robot_description/mesh/: dice-Body.stl
ros2_ws3_interface/: README.md
ros2_ws3_interface/src/executor_scripts/: package.xml  setup.py
ros2_ws3_interface/src/lifecycle_scripts/: setup.py
ros2_ws3_interface/src/moveturtle_scripts/: package.xml  setup.py
ros2_ws3_interfaces/: README.md
ros2_ws3_interfaces/src/action_scripts/: setup.py
ros2_ws3_interfaces/src/executor_scripts/: setup.py
ros2_ws3_interfaces/src/lifecycle_scripts/: setup.py
ros2_ws3_interfaces/src/moveturtle_scripts/: setup.py
ros2_ws3_interfaces/src/practice_robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws3_interfaces/src/practice_robot_interfaces/action/: CountUntil.action  MoveDist.action
ros2_ws3_interfaces/src/practice_robot_interfaces/launch/: practice_lifecycle.launch.py  practice_lifecycle.launch.xml
ros2_ws3_interfaces/src/robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws4_controller/: README.md
ros2_ws4_controller/src/my_robot_bringup/: package.xml  setup.py
ros2_ws4_controller/src/my_robot_controller/: CMakeLists.txt  ma_robot_controller.xml  me_robot_controller.xml  package.xml
ros2_ws4_controller/src/my_robot_controller/include/: ma_controller.hpp
ros2_ws4_controller/src/my_robot_controller/include/my_robot_controller/: ma_controller.hpp  me_controller.hpp
ros2_ws4_controller/src/my_robot_controller/src/: ma_controller.cpp  me_controller.cpp
ros2_ws4_controller/src/my_robot_firmware/: CMakeLists.txt  ma_robot_hardware_interface.xml  my_robot_hardware_interface.xml  package.xml
ros2_ws4_controller/src/my_robot_firmware/arduino_firmware/serial_communicator/: serial_communicator.ino
ros2_ws4_controller/src/my_robot_firmware/firmware/Arduino_serial_receiver_PCA9685/: Arduino_serial_receiver_PCA9685.ino
ros2_ws4_controller/src/my_robot_firmware/firmware/testArduino_PCA9685_channel0/: testArduino_PCA9685_channel0.ino
ros2_ws4_controller/src/my_robot_firmware/include/my_robot_firmware/: hardware_interface_pca9685.h  hardware_interface_pca9685_arm.hpp  hardware_interface_pca9685_base.hpp
ros2_ws4_controller/src/my_robot_firmware/include/pca9685/: PCA9685.cpp
ros2_ws4_controller/src/my_robot_firmware/src/: hardware_interface_pca9685.cpp  hardware_interface_pca9685_arm.cpp  hardware_interface_pca9685_base.cpp  testRaspPi5_pca9685_channel0.cpp  testRaspPi5_pca9685_channel01.cpp
ros2_ws4_controller/src/my_robot_firmware_py/: package.xml  setup.py
ros2_ws4_manipulators/: README.md
ros2_ws4_manipulators/src/robot_build/: CMakeLists.txt  package.xml
ros2_ws4_manipulators/src/robot_controller/: CMakeLists.txt  package.xml
ros2_ws4_manipulators/src/robot_description/: CMakeLists.txt  package.xml
ros2_ws5_manipulator/: README.md
ros2_ws5_manipulator/src/my_robot_bringup/: CMakeLists.txt  package.xml
ros2_ws5_manipulator/src/my_robot_commander/: CMakeLists.txt  package.xml
ros2_ws5_manipulator/src/my_robot_commander/src/: ma_robot_commander.cpp  ma_robot_moveit_poseTarget.cpp  my_robot_moveit_basic.cpp  my_robot_moveit_jointTarget.cpp  my_robot_moveit_namedTarget.cpp
ros2_ws5_manipulator/src/my_robot_interface/: CMakeLists.txt  package.xml
src/practice_controller/: package.xml  setup.py
(+137 files in other folders)
